# my_todo_app

./: .gitignore  main.py  pyproject.toml  todos.db
todo_app/: enums.py  models.py  routes.py
todo_app/database/: core.py
todo_app/database/repository/: base.py  tasks.py
