[project]
name = "todo-app"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "ruff>=0.12.7",
    "uvicorn[standart]>=0.35.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]


[tool.ruff]
lint.select = [
  "ANN",  # Проверка аннотаций типов (type hints) — требуют указывать типы у аргументов, возвращаемых значений и т.д.
  "UP",   # Проверка устаревших конструкций и импортов — обновляет старый синтаксис (pyupgrade)
  "F",    # Проверка синтаксических ошибок и потенциальных багов — неиспользуемые переменные, ошибки в логике (из Pyflakes)
  "E",    # Проверка соответствия PEP8 (ошибки форматирования) — например, отступы, пробелы
  "W",    # Предупреждения по стилю (Warnings) — например, пробел перед скобками, пустые блоки кода и т.п.
]
